# solana-skills

./: .gitattributes  .gitignore  Cargo.toml  Makefile  PRD-v1.5.md  README.md  SKILL.md  claude.md  install.sh  launch-thread.md  package.json
.github/ISSUE_TEMPLATE/: qedspec-bug.yml
.github/workflows/: ci.yml  lake-build.yml  release.yml
.qed/findings/: audit-20260427-v210.md
crates/leanstral/: Cargo.toml
crates/leanstral/lean_support/: test_lemmas.lean
crates/leanstral/src/: api.rs  consolidate.rs  main.rs  project.rs  proof_plan.rs  validate.rs  workflow.rs
crates/leanstral/templates/: lakefile.lean
crates/qedgen/: Cargo.toml
crates/qedgen-macros/: Cargo.toml
crates/qedgen-macros/src/: lib.rs  spec_bind.rs  verified.rs
crates/qedgen-sandbox/: Cargo.toml
crates/qedgen-sandbox/src/: lib.rs
crates/qedgen/lean_support/: README.md  test_lemmas.lean
crates/qedgen/lean_support/QEDGen/: Solana.lean
crates/qedgen/lean_support/QEDGen/Solana/: SBPF.lean
crates/qedgen/lean_support/QEDGen/Solana/SBPF/: Execute.lean  ISA.lean  Memory.lean  Tactic.lean
crates/qedgen/src/: anchor_adapt.rs  anchor_check.rs  anchor_project.rs  anchor_resolver.rs  api.rs  aristotle.rs  asm2lean.rs  ast.rs  banner.rs  check.rs  chumsky_adapter.rs  chumsky_parser.rs  ci.rs  codegen.rs  consolidate.rs  deps.rs  drift.rs  explain.rs  fill.rs  fingerprint.rs  framework.rs  idl.rs  idl2spec.rs  import_resolver.rs  init.rs  integration_test.rs  interface_gen.rs  kani.rs  lean_gen.rs  main.rs  parser.rs  probe.rs  probe_repro.rs  project.rs  proofs_bootstrap.rs  proptest_gen.rs  qed_lock.rs  qed_manifest.rs  qedspec.pest  ratchet.rs  (+13 more)
crates/qedgen/templates/: PROMPT_TEMPLATE.md  README.lean.md  integration-helpers-base.rs  integration-helpers-token.rs  lakefile.lean  program-Cargo.toml
crates/qedgen/tests/: codegen_smoke.rs  example_manifests.rs
docs/: index.html  llms-full.txt  llms.txt  og.html  style.css  verilog-lessons.md
docs/design/: spec-composition.md
docs/prds/: RELEASE-v2.10.md  RELEASE-v2.11.2.md  RELEASE-v2.11.3.md  RELEASE-v2.11.4.md  RELEASE-v2.11.md  RELEASE-v2.15.1.md  RELEASE-v2.15.md  RELEASE-v2.16.md  RELEASE-v2.8.md  RELEASE-v2.9.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: qedspec.tmLanguage.json
example/counter/formal_verification/: CounterProg.lean  CounterProofs.lean  lean_support
example/escrow/: leanstral_prompt.txt
examples/anchor-brownfield-demo/: README.md  before.qedspec
examples/anchor-marinade-style-demo/: README.md
examples/anchor-squads-style-demo/: README.md
examples/qed-drift-fixture/: Cargo.toml  example.qedspec
examples/qed-drift-fixture/src/: lib.rs
examples/quasar-readiness/: README.md
interfaces/: spl_token.qedspec
lean_solana/: README.md  lake-manifest.json  lakefile.lean  test_bridge.lean  test_codegen.lean  test_command_builders.lean  test_guards.lean  test_guards_dropset.lean  test_lemmas.lean  test_property.lean  test_slippage_bridge.lean  test_spec.lean  test_verify.lean
lean_solana/QEDGen/: Solana.lean
lean_solana_mathlib/: lakefile.lean
references/: adversarial-probes.md  brownfield-testing.md  cli.md  kani-examples.md  proof-patterns.md  qedspec-anchor.md  qedspec-dsl.md  qedspec-imports.md  release-history.md  sbpf.md  skill-operations.md  support-library.md
scripts/: call_leanstral.py  call_leanstral.ts  check-lake-build.sh  check-readme-drift.sh  check-version-consistency.sh
scripts/templates/: README.lean.md  lakefile.lean
skills/qedgen-auditor/: SKILL.md  exploits.md
templates/: verify.yml
templates/prompts/: sbpf_sorry_fill_prompt.txt  sbpf_system_prompt.txt  sorry_fill_prompt.txt  system_prompt.txt
(+305 files in other folders)
