[workspace]
members = ["crates/qedgen", "crates/qedgen-macros"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = "1"
sha2 = "0.10"
