[package]
name = "qedgen-solana-skills"
version = "2.5.2"
edition = "2021"
authors = ["abishekk92"]
description = "Spec-driven formal verification for Solana programs: .qedspec → Lean 4 proofs, Kani harnesses, coverage matrix, and Quasar codegen"
license = "MIT"
repository = "https://github.com/qedgen/solana-skills"

[[bin]]
name = "qedgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = "1"
sha2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tar = "0.4"
flate2 = "1"
chumsky = "0.12"

[dev-dependencies]
tempfile = "3"
