[package]
name = "qedgen-solana-skills"
version = "2.7.2"
edition = "2021"
authors = ["abishekk92"]
description = "Spec-driven formal verification for Solana programs: .qedspec → Lean 4 proofs, Kani harnesses, coverage matrix, and Quasar codegen"
license = "MIT"
repository = "https://github.com/qedgen/solana-skills"

[[bin]]
name = "qedgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = "1"
sha2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tar = "0.4"
flate2 = "1"
chumsky = "0.12"

# ratchet — upgrade-safety + mainnet-readiness lint.
# `ratchet-anchor` default-features is off to drop `ureq` (ratchet's RPC
# fetcher), which we don't need: qedgen hands ratchet an IDL JSON file it
# already has on disk, never an on-chain pubkey. The `package = …`
# aliases keep the import path (`ratchet_core::`, `ratchet_anchor::`)
# short without renaming the upstream crates.
ratchet-core = { package = "solana-ratchet-core", version = "0.3.1" }
ratchet-anchor = { package = "solana-ratchet-anchor", version = "0.3.1", default-features = false }

[dev-dependencies]
tempfile = "3"
